# koi

./: .gitignore  00_START_HERE.md  CLAUDE.md  Cargo.toml  INTEGRATION_RUST.md  PROMPT_A_RUST_AST.md  PROMPT_B_RUST_IR.md  PROMPT_C_RUST_ASSEMBLY.md  PROMPT_IDE_PYTHON.md  PROMPT_MAESTRO_RUST.md  QUICK_REF_RUST.md  REESCRITURA_COMPLETA_RUST.md  build.sh
.github/workflows/: release.yml
koi-assembly/: Cargo.toml
koi-assembly/src/: abi.rs  codegen.rs  ir_parser.rs  lib.rs  main.rs  optimizer.rs  register_allocator.rs
koi-assembly/tests/: backend_tests.rs
koi-ast/: Cargo.toml
koi-ast/src/: ast.rs  lib.rs  main.rs  parser.rs  scanner.rs  scope.rs  token.rs
koi-ir/: Cargo.toml
src/: backend.rs  frontend.rs  lib.rs  main.rs  middle_end.rs  pipeline.rs
src/backend/: arm64.rs  codegen.rs  optimizer.rs  peephole.rs  register_allocator.rs  riscv.rs  x86_64.rs
src/backend/arm64/: abi.rs  codegen.rs  instruction_select.rs  materializer.rs  peephole.rs  register_allocator.rs  scheduler.rs
src/backend/riscv/: abi.rs  instruction_select.rs  optimizer.rs  peephole.rs  regalloc.rs
src/backend/x86_64/: abi.rs  codegen.rs  optimizer.rs  register_allocator.rs
src/frontend/: ast.rs  borrow_checker.rs  diagnostics.rs  macro_expander.rs  parser.rs  scanner.rs  scope.rs  sexpr.rs  type_inferer.rs  typed_ast.rs
src/middle_end/: builtins.rs  inference.rs  ir.rs  ir_generator.rs  lambda_lifter.rs  lib.rs  monomorphizer.rs  pipeline.rs  types.rs  unification.rs
test/casos_prueba_carp/: 01_arithmetic.carp  02_booleans_and_comparisons.carp  03_if_else.carp  04_let_bindings.carp  05_recursion.carp  06_mutual_recursion.carp  07_loop.carp  08_higher_order.carp  09_lambda.carp  10_struct.carp  11_arrays.carp  12_references.carp  13_print_string.carp  14_print_int.carp  15_fibonacci.carp  16_nested_let.carp  17_multi_function.carp  18_tail_recursion.carp  19_struct_methods.carp  20_array_sum.carp  21_float_arithmetic.carp
test/test-backend/: backend_tests.rs  cross_backend_tests.rs  pipeline_cli_tests.rs
test/test-frontend/: cli_tests.rs  lexer_tests.rs  parser_errors_tests.rs  parser_tests.rs  schema_tests.rs  scope_tests.rs
test/test-koi-ast/: cli_tests.rs  lexer_tests.rs  parser_errors_tests.rs  parser_tests.rs  schema_tests.rs  scope_tests.rs
test/test-middle-end/: cli_tests.rs  inference_tests.rs  ir_generator_tests.rs  lambda_lifter_tests.rs  monomorphizer_tests.rs  pipeline_tests.rs  support.rs  types_tests.rs  unification_tests.rs
test_programs/: add.carp  control_flow.carp  fib.carp  kitchen_sink.carp  lambda.carp  struct.carp
